Your commit message here

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </div>
     </div>
   </section>
-
+  
 <!-- portfolio -->
 <section id="portfolio" class="s-portfolio target-section">
 
@@ -241,7 +241,7 @@
                 <div class="caption">
                     <div class="caption-content">
                         <h4>AI Customer Support</h4>
-                        <p class="mb-0">Automated customer support system with OpenAI APIs.</p>
+                        <p class="mb-0">Automated customer support system leveraging OpenAI APIs.</p>
                     </div>
                 </div>
                 <img src="images/portfolio/ai-customer-support.jpg" 
@@ -254,7 +254,7 @@
                 <div class="caption">
                     <div class="caption-content">
                         <h4>YT Metrics Analysis</h4>
-                        <p class="mb-0">Click to check out my findings!</p>
+                        <p class="mb-0">Analyze and improve YouTube channel performance.</p>
                     </div>
                 </div>
                 <img src="images/portfolio/youtube-metrics.jpg" 
@@ -264,69 +264,6 @@
   
     </div> <!-- end folio-list -->
 </section>
-
-  <!-- Modal Templates Popup
-  =========================================================== -->
-  
-  <div id="modal-01" hidden>
-    <div class="modal-popup">
-        <img src="images/portfolio/gallery/g-financial-market.jpg" alt="Financial Market Analysis Tool" />
-
-        <div class="modal-popup__desc">
-            <h5>Financial Market Analysis Tool</h5>
-            <p>A comprehensive tool for analyzing financial markets, utilizing Python for data analysis and visualization.</p>
-        </div>
-
-        <div class="project-link-container">
-            <a href="https://github.com/abdallahdalis/Financial-Market-Analysis-Tool" class="button-54 project-link">Project Link</a>
-        </div>
-    </div>
-</div> <!-- end modal -->
-
-<div id="modal-02" hidden>
-    <div class="modal-popup">
-        <img src="images/portfolio/gallery/g-move-smart.jpg" alt="Move Smart" />
-
-        <div class="modal-popup__desc">
-            <h5>Move Smart</h5>
-            <p>An intelligent application designed to optimize travel and commute times using real-time data and machine learning.</p>
-        </div>
-
-        <div class="project-link-container">
-            <a href="https://github.com/abdallahdalis/Move-Smart" class="button-54 project-link">Project Link</a>
-        </div>
-    </div>
-</div> <!-- end modal -->
-
-<div id="modal-03" hidden>
-    <div class="modal-popup">
-        <img src="images/portfolio/gallery/g-ai-customer-support.jpg" alt="AI Customer Support" />
-
-        <div class="modal-popup__desc">
-            <h5>AI Customer Support</h5>
-            <p>A project leveraging OpenAI APIs to develop an automated customer support system, enhancing user interaction.</p>
-        </div>
-
-        <div class="project-link-container">
-            <a href="https://github.com/abdallahdalis/AI-Customer-Support" class="button-54 project-link">Project Link</a>
-        </div>
-    </div>
-</div> <!-- end modal -->
-
-<div id="modal-04" hidden>
-    <div class="modal-popup">
-        <img src="images/portfolio/gallery/g-youtube-metrics.jpg" alt="YouTube Metrics Analysis Project" />
-
-        <div class="modal-popup__desc">
-            <h5>YouTube Metrics Analysis Project</h5>
-            <p>A data analytics project focused on understanding and improving YouTube channel performance using various metrics.</p>
-        </div>
-
-        <div class="project-link-container">
-            <a href="https://github.com/abdallahdalis/YouTube-Metrics-Analysis-Project" class="button-54 project-link">Project Link</a>
-        </div>
-    </div>
-</div> <!-- end modal -->
 
 <!-- contact
     ================================================== -->
