--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </header> <!-- end s-header -->
 
 
-    <!-- hero ================================================== -->
+    <!-- hero =================ƒ================================= -->
 <section id="hero" class="s-hero target-section">
 
     <div class="s-hero__bg rellax" data-rellax-speed="-7"></div>
@@ -75,7 +75,7 @@
                 <h1>I'm Abdallah Dalis.</h1>
 
                 <h3>
-                I'm a Chicago Based, <span> full stacked</span>, <span> data scientist</span>, <span> analyst</span> and <span>engineer</span> depicting the next best business move for me and my team. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+                I'm a Chicago Based, <span> fully stacked</span>, <span> data scientist</span>, <span> analyst</span> and <span>engineer</span> depicting the next best business move for me and my team. Let's <a class="smoothscroll" href="#about">start scrolling</a>
                 and learn more <a class="smoothscroll" href="#about">about me</a>.
                 </h3>
 
@@ -282,7 +282,7 @@
                 <div class="caption">
                     <div class="caption-content">
                         <h4>AI Customer Support</h4>
-                        <p class="mb-0">Automated customer support system leveraging OpenAI APIs.</p>
+                        <p class="mb-0">Automated customer support system with OpenAI APIs.</p>
                     </div>
                 </div>
                 <img src="images/portfolio/ai-customer-support.jpg" 
