--- a/styles.html
+++ b/styles.html
@@ -62,7 +62,7 @@
     </header> <!-- end s-header -->
 
 
-    <!-- hero ================================================== -->
+    <!-- hero =================ƒ================================= -->
 <section id="hero" class="s-hero target-section">
 
     <div class="s-hero__bg rellax" data-rellax-speed="-7"></div>
@@ -75,7 +75,7 @@
                 <h1>I'm Abdallah Dalis.</h1>
 
                 <h3>
-                I'm a Chicago Based, <span> full stacked</span>, <span> data scientist</span>, <span> analyst</span> and <span>engineer</span> depicting the next best business move for me and my team. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+                I'm a Chicago Based, <span> fully stacked</span>, <span> data scientist</span>, <span> analyst</span> and <span>engineer</span> depicting the next best business move for me and my team. Let's <a class="smoothscroll" href="#about">start scrolling</a>
                 and learn more <a class="smoothscroll" href="#about">about me</a>.
                 </h3>
 
@@ -282,7 +282,7 @@
                 <div class="caption">
                     <div class="caption-content">
                         <h4>AI Customer Support</h4>
-                        <p class="mb-0">Automated customer support system leveraging OpenAI APIs.</p>
+                        <p class="mb-0">Automated customer support system with OpenAI APIs.</p>
                     </div>
                 </div>
                 <img src="images/portfolio/ai-customer-support.jpg" 
@@ -329,11 +329,11 @@
                         <div style="display: flex; flex-wrap: wrap; gap: 20px;">
                             <div style="flex: 1; min-width: 200px;">
                                 <label for="fname" style="font-size: 18px;">First Name</label>
-                                <input type="text" id="fname" name="firstname" placeholder="First name.." style="width: 100%; padding: 12px; font-size: 18px;">
+                                <input type="text" id="fname" name="firstname" placeholder="First name.." style="width: 100%; padding: 12px; font-size: 18px;" required>
                             </div>
                             <div style="flex: 1; min-width: 200px;">
                                 <label for="lname" style="font-size: 18px;">Last Name</label>
-                                <input type="text" id="lname" name="lastname" placeholder="Last name.." style="width: 100%; padding: 12px; font-size: 18px;">
+                                <input type="text" id="lname" name="lastname" placeholder="Last name.." style="width: 100%; padding: 12px; font-size: 18px;" required>
                             </div>
                         </div>
     
@@ -385,8 +385,13 @@
             }).then(response => response.text())
               .then(data => {
                   notification.style.display = 'block';
-                  notification.textContent = 'Thank you for contacting us! Your message has been sent.';
-                  notification.style.backgroundColor = '#4CAF50'; // Green for success
+                  if (data.trim() === 'success') {
+                      notification.textContent = 'Thank you for contacting us! Your message has been sent.';
+                      notification.style.backgroundColor = '#4CAF50'; // Green for success
+                  } else {
+                      notification.textContent = 'Sorry, there was an error sending your message. Please try again.';
+                      notification.style.backgroundColor = '#f44336'; // Red for error
+                  }
               })
               .catch(error => {
                   notification.style.display = 'block';
