--- a/styles.html
+++ b/styles.html
@@ -167,9 +167,9 @@
                     <h3 class="text-white text-[24px] font-bold">Apple</h3>
                     <p class="text-secondary text-[16px] font-semibold" style="margin: 0px;">Technical Specialist<br>September 2022 - April 2024</p>
                     <ul class="mt-5 list-disc ml-5 space-y-2">
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Engineered tailored technical support, assisting over 500+ clients monthly and maintaining a 95% customer satisfaction rate.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Assisted clients in maximizing utilization of Apple’s hardware and software on their devices.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Introduced new troubleshooting techniques and mentored 5 technicians, boosting team market standing by 15%.</li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Engineered tailored technical support, assisting over 500+ clients monthly and maintaining a 95% customer satisfaction rate.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Assisted clients in maximizing utilization of Apple’s hardware and software on their devices.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Introduced new troubleshooting techniques and mentored 5 technicians, boosting team market standing by 15%.</span></li>
                     </ul>
                 </div>
             </div>
