--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                     <h3 class="text-white text-[24px] font-bold">Apple</h3>
                     <p class="text-secondary text-[16px] font-semibold" style="margin: 0px;">Technical Specialist<br>September 2022 - April 2024</p>
                     <ul class="mt-5 list-disc ml-5 space-y-2">
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Engineered tailored technical support, assisting over 500+ clients monthly and maintaining a 95% customer satisfaction rate.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Assisted clients in maximizing utilization of Apple’s hardware and software on their devices.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Introduced new troubleshooting techniques and mentored 5 technicians, boosting team market standing by 15%.</li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Engineered tailored technical support, assisting over 500+ clients monthly and maintaining a 95% customer satisfaction rate.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Assisted clients in maximizing utilization of Apple’s hardware and software on their devices.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Introduced new troubleshooting techniques and mentored 5 technicians, boosting team market standing by 15%.</span></li>
                     </ul>
                 </div>
             </div>
@@ -188,9 +188,9 @@
                     <h3 class="text-white text-[24px] font-bold">Duly Health and Care</h3>
                     <p class="text-secondary text-[16px] font-semibold" style="margin: 0px;">Data Scientist Intern<br>May 2023 - August 2023</p>
                     <ul class="mt-5 list-disc ml-5 space-y-2">
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Led a 5-member, cross-functional team to develop a Fee Schedule Automation Tool and Geographic Clinic Assignment, increasing revenue opportunity detection by 20%.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Designed clinic data with a structured tree format, improving query efficiency by 30%.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Identified 150+ at-risk patients using predictive analytics, improving care management by 20%.</li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Led a 5-member, cross-functional team to develop a Fee Schedule Automation Tool and Geographic Clinic Assignment, increasing revenue opportunity detection by 20%.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Designed clinic data with a structured tree format, improving query efficiency by 30%.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Identified 150+ at-risk patients using predictive analytics, improving care management by 20%.</span></li>
                     </ul>
                 </div>
             </div>
@@ -209,9 +209,9 @@
                     <h3 class="text-white text-[24px] font-bold">Headstarter AI</h3>
                     <p class="text-secondary text-[16px] font-semibold" style="margin: 0px;">Software Engineer Fellow<br>July 2024 - September 2024</p>
                     <ul class="mt-5 list-disc ml-5 space-y-2">
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Built 5+ AI apps and APIs using NextJS, OpenAI, Pinecone, StripeAPI, AWS, and Firebase; achieving 98% accuracy as seen by 1000 users.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Developed projects, from design to deployment, with startup company ASL Aspire, leading 4+ engineers using MVC design patterns.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Coached by Amazon, Bloomberg, and Capital One engineers on Agile, CI/CD, Git, and microservice patterns.</li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Built 5+ AI apps and APIs using NextJS, OpenAI, Pinecone, StripeAPI, AWS, and Firebase; achieving 98% accuracy as seen by 1000 users.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Developed projects, from design to deployment, with startup company ASL Aspire, leading 4+ engineers using MVC design patterns.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Coached by Amazon, Bloomberg, and Capital One engineers on Agile, CI/CD, Git, and microservice patterns.</span></li>
                     </ul>
                 </div>
             </div>
@@ -230,9 +230,9 @@
                     <h3 class="text-white text-[24px] font-bold">Chicago Transit Authority</h3>
                     <p class="text-secondary text-[16px] font-semibold" style="margin: 0px;">Data Analyst Intern<br>May 2024 - Present</p>
                     <ul class="mt-5 list-disc ml-5 space-y-2">
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Improved Ventra revenue reconciliation accuracy by 20% through the development and implementation of advanced analytics algorithms.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Reduced manual processing time by 25% and increased reporting accuracy by 15% by automating and optimizing financial reporting and modeling.</li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider">Delivered a predictive Quarterly Investment Report using PowerPoint and Power BI, boosting investment performance by 10%.</li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Improved Ventra revenue reconciliation accuracy by 20% through the development and implementation of advanced analytics algorithms.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Reduced manual processing time by 25% and increased reporting accuracy by 15% by automating and optimizing financial reporting and modeling.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Delivered a predictive Quarterly Investment Report using PowerPoint and Power BI, boosting investment performance by 10%.</span></li>
                     </ul>
                 </div>
             </div>
