--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
   <!-- about
     ================================================== -->
 <section id="about" class="s-about target-section">
-
     <div class="row">
         <div class="column large-3 tab-12">
             <img class="s-about__pic" src="images/avatars/user-06.jpg" alt="Abdallah Dalis">
@@ -143,9 +142,11 @@
     </div> <!-- end row -->
 
 </section> <!-- end s-about -->
-<!-- Resume Section -->
-<section id="resume">
-    <section id="experiences" class="container mt-20 flex flex-col">
+
+
+  <!-- Resume ================================================== -->
+<section id="resume" class="target-section">
+    <section id="experiences" class="container mt-20 flex flex-col target-section">
         <!-- Title and Subheading -->
         <div class="text-center mb-10">
             <h2 class="text-3xl font-bold text-white">Experiences</h2>
@@ -191,6 +192,7 @@
                         <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Led a 5-member, cross-functional team to develop a Fee Schedule Automation Tool and Geographic Clinic Assignment, increasing revenue opportunity detection by 20%.</span></li>
                         <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Designed clinic data with a structured tree format, improving query efficiency by 30%.</span></li>
                         <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Identified 150+ at-risk patients using predictive analytics, improving care management by 20%.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Implemented AI neural networks to analyze over 5,000 diagnosis codes and developed 100+ unit tests, reducing analysis time by 25%, bugs by 35%, and enhancing understanding of chronic conditions by 40%.</span></li>
                     </ul>
                 </div>
             </div>
@@ -230,8 +232,8 @@
                     <h3 class="text-white text-[24px] font-bold">Chicago Transit Authority</h3>
                     <p class="text-secondary text-[16px] font-semibold" style="margin: 0px;">Data Analyst Intern<br>May 2024 - Present</p>
                     <ul class="mt-5 list-disc ml-5 space-y-2">
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Improved Ventra revenue reconciliation accuracy by 20% through the development and implementation of advanced analytics algorithms.</span></li>
-                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Reduced manual processing time by 25% and increased reporting accuracy by 15% by automating and optimizing financial reporting and modeling.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Refined Ventra revenue reconciliation accuracy by 20% through the development and implementation of advanced analytics algorithms, leveraging Oracle and Microsoft Access for database administration.</span></li>
+                        <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Reduced manual processing time by 25% and increased reporting accuracy by 15% by automating financial reporting and modeling using data mining, pattern recognition, VBA, and Excel Macros, leveraging real-time market data from Bloomberg Terminal.</span></li>
                         <li class="text-white-100 text-[14px] pl-1 tracking-wider"><span style="font-size: 1.25em;">Delivered a predictive Quarterly Investment Report using PowerPoint and Power BI, boosting investment performance by 10%.</span></li>
                     </ul>
                 </div>
@@ -242,7 +244,6 @@
 
 <!-- portfolio -->
 <section id="portfolio" class="s-portfolio target-section">
-
     <div class="row s-portfolio__header">
         <div class="column large-12">
             <h3>A Few Of My Latest Creations</h3>
