--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                 <!-- Download Resume Button -->
                 <div class="button-container">
-                    <a href="https://drive.google.com/file/d/1ZACO66TGZDvLpOrHQhGQk7j8ogvn9Dai/view?usp=sharing" class="button-54" role="button">
+                    <a href="https://drive.google.com/uc?export=download&id=1ZACO66TGZDvLpOrHQhGQk7j8ogvn9Dai" class="button-54" role="button">
                         Download Resume
                     </a>
                 </div>
