--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h1>I'm Abdallah Dalis.</h1>
 
                 <h3>
-                I'm a Chicago Based, <span> fully stacked</span>, <span> data scientist</span>, <span> analyst</span> and <span>engineer</span> depicting the next best business move for me and my team. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+                I'm a Chicago Based, <span> fully stacked</span>, <span> data scientist</span>, <span> analyst</span> and <span>engineer</span>, depicting the next best business move for me and my team. Let's <a class="smoothscroll" href="#about">start scrolling</a>
                 and learn more <a class="smoothscroll" href="#about">about me</a>.
                 </h3>
 
