new porject addition

--- a/index.html
+++ b/index.html
@@ -290,6 +290,19 @@
                      alt="AI Customer Support">
             </a>
         </div> <!-- end folio-item -->
+
+        <div class="column folio-item">
+            <a href="https://github.com/abdallahdalis/Movie-Recommendations" class="folio-item__thumb">
+                <div class="caption">
+                    <div class="caption-content">
+                        <h4>Movie Recommendations</h4>
+                        <p class="mb-0">ML-based Netflix movie suggestions.</p>
+                    </div>
+                </div>
+                <img src="images/portfolio/netflix (1).jpg" 
+                     alt="Movie Recommendations">
+            </a>
+        </div> <!-- end folio-item -->
   
         <div class="column folio-item">
             <a href="https://github.com/abdallahdalis/YouTube-Metrics-Analysis-Project" class="folio-item__thumb">
